--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cleanup:storage": "npx tsx scripts/cleanup-storage.ts",
+    "cleanup:firestore": "npx tsx scripts/cleanup-firestore.ts",
+    "cleanup:all": "npx tsx scripts/cleanup-all.ts",
+    "cleanup:admin": "npx tsx scripts/cleanup-admin.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
+    "@aws-sdk/client-s3": "^3.777.0",
+    "@aws-sdk/s3-request-presigner": "^3.777.0",
     "@clerk/nextjs": "^6.9.6",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -25,12 +31,13 @@
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
-    "@radix-ui/react-tooltip": "^1.1.6",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tiptap/extension-heading": "^2.11.0",
     "@tiptap/extension-image": "^2.11.0",
     "@tiptap/extension-link": "^2.11.0",
@@ -41,6 +48,8 @@
     "@tiptap/react": "^2.11.0",
     "@tiptap/starter-kit": "^2.11.0",
     "@types/next-auth": "^3.13.0",
+    "@types/papaparse": "^5.3.15",
+    "@types/react-window": "^1.8.8",
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -55,11 +64,13 @@
     "next": "^15.1.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "papaparse": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-dropzone": "^14.3.5",
+    "react-dropzone": "^14.3.8",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.4.0",
+    "react-window": "^1.8.11",
     "shadcn-ui": "^0.9.4",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
@@ -71,9 +82,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "uuid": "^11.1.0"
   }
 }
