--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,14 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY="your-anon-key"
 SUPABASE_SERVICE_ROLE_KEY="your-service-role-key"
 SUPABASE_ANON_KEY="your-anon-key"
 
+# Cloudflare R2
+CLOUDFLARE_R2_ACCESS_KEY_ID="your-r2-access-key-id"
+CLOUDFLARE_R2_SECRET_ACCESS_KEY="your-r2-secret-access-key"
+CLOUDFLARE_R2_ENDPOINT="https://<account-id>.r2.cloudflarestorage.com"
+CLOUDFLARE_R2_BUCKET_NAME="wallpaper-images"
+CLOUDFLARE_R2_PUBLIC_DOMAIN="https://pub-<hash>.r2.dev" # Optional, if using Cloudflare R2 public URLs
+NEXT_PUBLIC_CLOUDFLARE_R2_PUBLIC_DOMAIN="pub-<hash>.r2.dev" # Without protocol for Next.js Image component
+
 # Other APIs
 GEMINI_API_KEY="your-gemini-api-key"
 GEMINI_MODEL="your-gemini-model"
