Rebrand to GetWallpapersFree.com - Update site name, URLs and branding throughout the application

--- a/.env.example
+++ b/.env.example
@@ -32,4 +32,9 @@ NEXT_PUBLIC_CLOUDFLARE_R2_PUBLIC_DOMAIN="pub-<hash>.r2.dev" # Without protocol f
 # Other APIs
 GEMINI_API_KEY="your-gemini-api-key"
 GEMINI_MODEL="your-gemini-model"
-GEMINI_PROMPT="your-gemini-prompt" 
+GEMINI_PROMPT="your-gemini-prompt"
+
+# Pinterest Configuration
+PINTEREST_ACCESS_TOKEN=your_pinterest_access_token
+PINTEREST_BOARD_ID=your_pinterest_board_id
+WALLPAPER_RSS_URL=your_wallpaper_rss_feed_url 
